# musicli

./: ADVANCED_UX.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CLI.md  CODE_SUMMARY.md  CROSSPLATFORM.md  Cargo.toml  DELIVERABLES.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  FINAL_DELIVERABLES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_UX.md  README.md  SUMMARY.md  UX_FEATURES_INDEX.md  install.ps1  install.sh
src/: ascii_art.rs  audio_engine.rs  audio_engine_v2.rs  downloader.rs  file_manager.rs  keyboard.rs  main.rs  notifications.rs  progress.rs  ui.rs
